<resources>
    <string name="app_name">DchaSystemSettings</string>
    <string name="action_settings">DchaSystemSettings</string>
    <string name="msg_ok">OK</string>
    <string name="common_msg_tablet_setting">タブレットの設定</string>
    <string name="common_msg_owner_setting">きみの設定</string>
    <string name="btn_access_near_netowork">近くのネットワークから接続する</string>
    <string name="btn_access_aoss">AOSSから接続する</string>
    <string name="btn_access_rakuraku">ラクラク無線スタートから接続する</string>
    <string name="msg_mac_address">MACアドレス</string>
    <string name="msg_ap_name">アクセスポイント名：</string>
    <string name="msg_add_network">Wi-Fiネットワークを追加</string>
    <string name="msg_network">Wi-Fiネットワーク</string>
    <string name="msg_access_wifi">Wi-Fi接続</string>
    <string name="msg_access_wifi_on">する</string>
    <string name="msg_access_wifi_off">しない</string>
    <string name="msg_wifi_setting_title">Wi-Fi</string>
    <string name="msg_wifi_setting_content">Wi-Fiの接続設定を行います。下記より接続方法を\n選択してください。</string>
    <string name="msg_sd_update_enable">端末は最新の状態です。</string>
    <string name="msg_sd_update_able">端末をアップデートできます。</string>
    <string name="msg_sd_update_btn">アップデート</string>
    <string name="msg_sd_update_dialog_title">アップデート中</string>
    <string name="msg_sd_update_dialog_content">しばらくお待ちください</string>
    <string name="msg_sd_update_cancel">アップデートが中断しました。</string>
    <string name="msg_sd_update_failed">アップデートに失敗しました。</string>
    <string name="path_sd_update_file">/mnt/extsd/update.zip</string>
    <string name="msg_setting_title">設定</string>
    <string name="msg_fundamental_setting_title">基本設定</string>
    <string name="msg_system_setting_title">システム設定</string>
    <string name="msg_system_setting_attention">（おうちの方と一緒に設定してください）</string>
    <string name="msg_password_title">パスワード</string>
    <string name="msg_password_invalid">入力されたパスワードは正しくありません。</string>
    <string name="msg_management_dialog">ここから先は，必ずおうちの人に\nお願いしてやってもらおう！</string>
    <string name="msg_management_dialog_alerm">警告</string>
    <string name="msg_management_dialog_abandon">チャレンジタッチを\n完全に使えなくしますか？</string>
    <string name="msg_management_dialog_abandon2">本当に完全に使えなくしますか？</string>
    <string name="msg_management_dialog_initialize">チャレンジタッチを\n初期化しますか？</string>
    <string name="msg_management_dialog_initialize2">本当に初期化しますか？</string>
    <string name="wifi_security_short_wep">WEP</string>
    <string name="wifi_security_short_wpa">WPA</string>
    <string name="wifi_security_short_wpa2">WPA2</string>
    <string name="wifi_security_short_wpa_wpa2">WPA/WPA2</string>
    <string name="wifi_security_short_psk_generic">@string/wifi_security_short_wpa_wpa2</string>
    <string name="wifi_security_wep">WEP</string>
    <string name="wifi_security_wpa">WPA PSK</string>
    <string name="wifi_security_wpa2">WPA2 PSK</string>
    <string name="wifi_security_wpa_wpa2">WPA/WPA2 PSK</string>
    <string name="wifi_security_psk_generic">@string/wifi_security_wpa_wpa2</string>
    <string name="wifi_wps_available_first_item">WPS available</string>
    <string name="wifi_wps_available_second_item"> (WPS available)</string>
    <string name="wifi_ip_settings_invalid_gateway">Type a valid gateway address.</string>
    <string name="wifi_ip_settings_invalid_dns">Type a valid DNS address.</string>
    <string name="wifi_ip_settings_invalid_network_prefix_length">Type a network prefix length between 0 and 32.</string>
    <string name="wifi_failed_connect_message">Failed to connect to network</string>
    <string name="wifi_failed_forget_message">Failed to forget network</string>
    <string name="wifi_failed_save_message">Failed to save network</string>
    <string name="wifi_not_in_range">圏外</string>
    <string name="wifi_remembered">保存済み</string>
    <string name="wifi_disabled_generic">無効</string>
    <string name="wifi_disabled_network_failure">インターネット接続不良により無効</string>
    <string name="wifi_disabled_password_failure">認証に問題</string>
    <string name="wifi_secured_first_item">%1$sで保護</string>
    <string name="wifi_secured_second_item">、%1$sで保護</string>
    <string name="wifi_empty_list_wifi_on">Wi-Fiネットワークを検索中…</string>
    <string name="wifi_empty_list_wifi_off">利用可能なネットワークを表示するにはWi-FiをON</string>
    <string name="wifi_starting">Wi-FiをONにしています...</string>
    <string name="wifi_stopping">Wi-FiをOFFにします...</string>
    <string name="wifi_fail_to_scan">ネットワークをスキャンできません</string>
    <string name="wifi_other_network">他のネットワーク…</string>
    <string name="wifi_required_info_text">セットアップを完了するには、タブレットでWi-Fiに接続する必要があります。セットアップ後にモバイルデータ通信とWi-Fiを切り替えられます。</string>
    <string name="wifi_setup_wizard_title">Wi-Fiの選択</string>
    <string name="wifi_menu_more_options">その他のオプション</string>
    <string name="wifi_setup_wps">自動設定（WPS）</string>
    <string name="wifi_setup_title">Wi-Fi設定</string>
    <string name="wifi_setup_title_editing_network">Wi-Fiネットワーク「%s」に接続</string>
    <string name="wifi_setup_title_connecting_network">Wi-Fiネットワーク「%s」に接続中...</string>
    <string name="wifi_setup_title_connected_network">Wi-Fiネットワーク「%s」に接続済み</string>
    <string name="wifi_setup_title_add_network">ネットワークの追加</string>
    <string name="wifi_setup_not_connected">接続されていません</string>
    <string name="wifi_setup_add_network">ネットワークを追加</string>
    <string name="wifi_setup_refresh_list">リストを更新</string>
    <string name="wifi_setup_skip">スキップ</string>
    <string name="wifi_setup_next">次へ</string>
    <string name="wifi_setup_back">戻る</string>
    <string name="wifi_setup_detail">ネットワークの詳細</string>
    <string name="wifi_setup_connect">接続</string>
    <string name="wifi_setup_save">保存</string>
    <string name="wifi_setup_cancel">キャンセル</string>
    <string name="wifi_setup_status_scanning">ネットワークをスキャン中...</string>
    <string name="wifi_setup_status_select_network">接続するネットワークをタップしてください</string>
    <string name="wifi_setup_status_existing_network">既存ネットワークに接続</string>
    <string name="wifi_setup_status_unsecured_network">保護されていないネットワークに接続</string>
    <string name="wifi_setup_status_edit_network">ネットワーク設定を入力してください</string>
    <string name="wifi_setup_status_new_network">新しいネットワークに接続</string>
    <string name="wifi_setup_status_connecting">接続しています...</string>
    <string name="wifi_setup_status_proceed_to_next">次のステップに進みます</string>
    <string name="wifi_setup_status_eap_not_supported">EAPはサポートされていません。</string>
    <string name="wifi_setup_eap_not_supported">EAP Wi-Fi接続はセットアップ時に設定できません。セットアップの完了後に[設定]の[無線とネットワーク]で設定することができます。</string>
    <string name="wifi_setup_description_connecting">接続には数分かかることがあります...</string>
    <string name="wifi_setup_description_connected">設定を続けるには[次へ]をタップします。\n\n別のWi-Fiネットワークに接続するには[戻る]をタップします。</string>
    <string name="wifi_skipped_message">警告: 追加のデータ通信料が発生する可能性があります。\n\nタブレットのセットアップでは大量のネットワーク処理が必要となる場合があります。</string>
    <string name="wifi_and_mobile_skipped_message">警告: タブレットは、ソフトウェアが最新の状態かどうかを確認できません。</string>
    <string name="wifi_skip_anyway">無視してスキップ</string>
    <string name="wifi_dont_skip">スキップしない</string>
    <string name="wifi_settings_category">Wi-Fi設定</string>
    <string name="wifi_add_network">ネットワークを追加</string>
    <string name="wifi_connect">接続</string>
    <string name="wifi_forget">切断</string>
    <string name="wifi_done">完了</string>
    <string name="wifi_save">保存</string>
    <string name="wifi_cancel">キャンセル</string>
    <string name="wifi_ssid">ネットワークSSID</string>
    <string name="wifi_security">セキュリティ</string>
    <string name="wifi_signal">電波強度</string>
    <string name="wifi_status">接続状況</string>
    <string name="wifi_speed">リンク速度</string>
    <string name="wifi_frequency">周波数</string>
    <string name="wifi_ip_address">IPアドレス</string>
    <string name="wifi_ip_settings_invalid_ip_address">Type a valid IP address.</string>
    <string name="wifi_eap_method">EAP方式</string>
    <string name="please_select_phase2">フェーズ2認証</string>
    <string name="wifi_eap_ca_cert">CA証明書</string>
    <string name="wifi_eap_user_cert">ユーザー証明書</string>
    <string name="wifi_eap_identity">ID</string>
    <string name="wifi_eap_anonymous">匿名ID</string>
    <string name="wifi_password">パスワード</string>
    <string name="wifi_show_password">パスワードを表示する</string>
    <string name="wifi_ip_settings">IP設定</string>
    <string name="wifi_unchanged">（変更なし）</string>
    <string name="wifi_unspecified">（指定なし）</string>
    <string name="wifi_security_none">なし</string>
    <string name="wifi_show_advanced">詳細オプションを表示</string>
    <string name="wifi_wps_setup_title">Wi-Fi保護設定</string>
    <string name="wifi_wps_setup_msg">WPSを開始しています…</string>
    <string name="wifi_wps_onstart_pbc">ルーターのWi-Fi保護設定ボタンを押します。「WPS」と表記されている場合や、次のような記号が表示されている場合もあります:</string>
    <string name="wifi_wps_onstart_pin">Wi-FiルーターでPIN「%1$s」を入力します。セットアップの完了まで最大2分ほどかかることがあります。</string>
    <string name="wifi_wps_complete">WPSの設定に成功しました。ネットワークに接続しています…</string>
    <string name="wifi_wps_connected">Wi-Fiネットワーク%sに接続しました</string>
    <string name="wifi_wps_in_progress">WPSを設定中です。完了まで最大2分程度かかることがあります。</string>
    <string name="wifi_wps_failed_generic">WPSの設定に失敗しました。数分後にもう一度お試しください。</string>
    <string name="wifi_wps_failed_wep">無線ルーターのセキュリティ設定（WEP）はサポートされていません</string>
    <string name="wifi_wps_failed_tkip">無線ルーターのセキュリティ設定（TKIP）はサポートされていません</string>
    <string name="wifi_wps_failed_auth">認証に失敗しました。もう一度お試しください。</string>
    <string name="wifi_wps_failed_overlap">別のWPSセッションが検出されました。数分後にもう一度お試しください。</string>
    <string name="credentials_password_too_short">パスワードを8文字以上で入力してください。</string>
    <string name="proxy_settings_title">プロキシ設定</string>
    <string name="proxy_clear_text">消去</string>
    <string name="proxy_port_label">プロキシポート</string>
    <string name="proxy_exclusionlist_label">プロキシを不使用</string>
    <string name="proxy_exclusionlist_hint">example.com,mycomp.test.com,localhost</string>
    <string name="proxy_defaultView_text">初期設定に戻す</string>
    <string name="proxy_action_text">終了</string>
    <string name="proxy_hostname_label">プロキシのホスト名</string>
    <string name="proxy_hostname_hint">proxy.example.com</string>
    <string name="proxy_error">注意</string>
    <string name="proxy_error_dismiss">OK</string>
    <string name="proxy_error_invalid_host">入力したホスト名は無効です。</string>
    <string name="proxy_error_invalid_exclusion_list">入力された除外リストの形式が正しくありません。除外するドメインをカンマ区切りリスト形式で入力してください。</string>
    <string name="proxy_error_empty_port">ポートフィールドを入力してください。</string>
    <string name="proxy_error_empty_host_set_port">[ホスト]フィールドが空の場合は、[ポート]フィールドも空にしてください。</string>
    <string name="proxy_error_invalid_port">入力したポートは無効です。</string>
    <string name="proxy_warning_limited_support">HTTPプロキシはブラウザで使用されていますが、他のアプリでは使用できません。</string>
    <string name="proxy_port_hint">8080</string>
    <string name="wifi_ip_address_hint">192.168.1.128</string>
    <string name="wifi_gateway">ゲートウェイ</string>
    <string name="wifi_gateway_hint">192.168.1.1</string>
    <string name="wifi_network_prefix_length">ネットワークプレフィックス長</string>
    <string name="wifi_network_prefix_length_hint">24</string>
    <string name="wifi_dns1">DNS 1</string>
    <string name="wifi_dns1_hint">8.8.8.8</string>
    <string name="wifi_dns2">DNS 2</string>
    <string name="wifi_dns2_hint">8.8.4.4</string>
    <string name="device_status">Status</string>
    <string name="device_status_summary">Status of the battery, network, and other information</string>
    <string name="legal_information">Legal information</string>
    <string name="model_number">Model number</string>
    <string name="device_info_default">Unknown</string>
    <string name="about_settings">About tablet</string>
    <string name="firmware_version">Android version</string>
    <string name="security_patch">Android security patch level</string>
    <string name="kernel_version">Kernel version</string>
    <string name="build_number">Build number</string>
    <string name="copyright_title">Copyright</string>
    <string name="license_title">License</string>
    <string name="terms_title">Terms and conditions</string>
</resources>