<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:title="@string/about_settings">
    <PreferenceScreen
        android:title="@string/device_status"
        android:key="status_info"
        android:summary="@string/device_status_summary">
        <intent
            android:targetPackage="com.android.settings"
            android:action="android.intent.action.MAIN"
            android:targetClass="com.android.settings.deviceinfo.Status"/>
    </PreferenceScreen>
    <PreferenceScreen
        android:title="@string/legal_information"
        android:key="container">
        <PreferenceScreen
            android:title="@string/copyright_title"
            android:key="copyright">
            <intent android:action="android.settings.COPYRIGHT"/>
        </PreferenceScreen>
        <PreferenceScreen
            android:title="@string/license_title"
            android:key="license">
            <intent android:action="android.settings.LICENSE"/>
        </PreferenceScreen>
        <PreferenceScreen
            android:title="@string/terms_title"
            android:key="terms">
            <intent android:action="android.settings.TERMS"/>
        </PreferenceScreen>
    </PreferenceScreen>
    <Preference
        android:title="@string/model_number"
        android:key="device_model"
        android:summary="@string/device_info_default"
        style="?android:attr/preferenceInformationStyle"/>
    <Preference
        android:title="@string/firmware_version"
        android:key="firmware_version"
        android:summary="@string/device_info_default"
        style="?android:attr/preferenceInformationStyle"/>
    <Preference
        android:title="@string/security_patch"
        android:key="security_patch"
        android:summary="@string/device_info_default"
        style="?android:attr/preferenceInformationStyle"/>
    <Preference
        android:title="@string/kernel_version"
        android:key="kernel_version"
        android:summary="@string/device_info_default"
        style="?android:attr/preferenceInformationStyle"/>
    <Preference
        android:title="@string/build_number"
        android:key="build_number"
        android:summary="@string/device_info_default"
        style="?android:attr/preferenceInformationStyle"/>
</PreferenceScreen>
